# curiosity-platform

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  docker-compose.yaml  package-lock.json  package.json  wrangler.jsonc
.claude/: DECISIONS.md  PROJECT_VISION.md
backend/: .env.example  .gitignore  alembic.ini  main.py  pyproject.toml
backend/curiosity/common/: configuration.py  database.py
backend/curiosity/common/alembic/: env.py  script.py.mako
backend/curiosity/common/alembic/versions/: 20260419T000000_a1b2c3d4e5f6_init_baseline.py  20260420T000343_efb861f7ad59_init_baseline.py  20260420T013527_b64eb22e36a7_create_store_table.py  20260420T015549_05e03393876c_create_category_table.py  20260420T015552_51c261f5034c_add_category_fk_to_store.py  20260503T012127_d2e54e5954c2_seed_categories.py
backend/curiosity/common/model/: base.py
backend/curiosity/web/: main.py
backend/curiosity/web/dependencies/: __init__.py  admin.py  auth.py
backend/curiosity/web/managers/: category_manager.py  store_manager.py
backend/curiosity/web/model/: category.py  store.py
backend/curiosity/web/routers/: categories.py  health.py  me.py  stores.py
backend/curiosity/web/schemas/: auth.py  category.py  store.py
backend/curiosity/web/services/: firebase.py  keycloak.py  minio_service.py
backend/tests/: conftest.py
backend/tests/unit/: test_configuration.py  test_database.py
backend/tests/unit/web/: test_admin_auth.py  test_auth.py  test_category_manager.py  test_health.py  test_store_image_upload.py  test_store_manager.py
(+193 files in other folders)
